# vuo

./: .alexignore  .alexrc  .arcconfig  .arclint  .clang-format  .codespellrc  .cppcheck  .cppcheck.xml  .editorconfig  .gitignore  .mdlstyle.rb  .overcommit.yml  .yamllint.yaml  Brewfile  Brewfile.lock.json  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPENDENCIES.md  LICENSE.md  README.md  conanfile.py  example.pri  module.pri  vuo-macosx-sdk.pri  vuo.pch  vuo.pri  vuo.pro  vuo.pro.shared  vuo.qbs
base/: CMakeLists.txt  VuoBase.cc  VuoBase.hh  VuoBaseDetail.cc  VuoBaseDetail.hh  VuoCable.cc  VuoCable.hh  VuoComment.cc  VuoComment.hh  VuoComposition.cc  VuoComposition.hh  VuoCompositionMetadata.cc  VuoCompositionMetadata.hh  VuoCompositionStub.c  VuoConfig-for-framework.h.in  VuoConfig.h.in  VuoException.cc  VuoException.hh  VuoFileUtilities.cc  VuoFileUtilities.hh  VuoFileUtilitiesCocoa.hh  VuoFileUtilitiesCocoa.mm  VuoFileWatcher.cc  VuoFileWatcher.hh  VuoGenericType.cc  VuoGenericType.hh  VuoJsonUtilities.cc  VuoJsonUtilities.hh  VuoMacOSSDKWorkaround.h  VuoModule.cc  VuoModule.hh  VuoMovieExporter.hh  VuoMovieExporter.mm  VuoNode.cc  VuoNode.hh  VuoNodeClass.cc  VuoNodeClass.hh  VuoNodeSet.cc  VuoNodeSet.hh  VuoPort.cc  (+41 more)
compiler/: CMakeLists.txt  VuoClangIssues.cc  VuoClangIssues.hh  VuoCompiler.cc  VuoCompiler.hh  VuoCompilerBitcodeGenerator.cc  VuoCompilerBitcodeGenerator.hh  VuoCompilerBitcodeParser.cc  VuoCompilerBitcodeParser.hh  VuoCompilerCable.cc  VuoCompilerCable.hh  VuoCompilerChain.cc  VuoCompilerChain.hh  VuoCompilerCodeGenUtilities.cc  VuoCompilerCodeGenUtilities.hh  VuoCompilerComment.cc  VuoCompilerComment.hh  VuoCompilerCompatibility.cc  VuoCompilerCompatibility.hh  VuoCompilerComposition.cc  VuoCompilerComposition.hh  VuoCompilerCompositionDiff.cc  VuoCompilerCompositionDiff.hh  VuoCompilerCompoundType.cc  VuoCompilerCompoundType.hh  VuoCompilerConstantStringCache.cc  VuoCompilerConstantStringCache.hh  VuoCompilerConstantsCache.cc  VuoCompilerConstantsCache.hh  VuoCompilerData.cc  VuoCompilerData.hh  VuoCompilerDataClass.cc  VuoCompilerDataClass.hh  VuoCompilerDebug.cc  VuoCompilerDebug.hh  VuoCompilerDelegate.cc  VuoCompilerDelegate.hh  VuoCompilerDiagnosticConsumer.cc  VuoCompilerDiagnosticConsumer.hh  VuoCompilerDriver.cc  (+123 more)
editor/: CMakeLists.txt  GlslIsfQuickReference.md  VuoActivityIndicator.cc  VuoActivityIndicator.hh  VuoCodeEditor.cc  VuoCodeEditor.hh  VuoCodeEditorStages.cc  VuoCodeEditorStages.hh  VuoCodeGutter.cc  VuoCodeGutter.hh  VuoCodeHighlighterGLSL.cc  VuoCodeHighlighterGLSL.hh  VuoCodeIssueList.cc  VuoCodeIssueList.hh  VuoCodeWindow.cc  VuoCodeWindow.hh  VuoCommandAdd.cc  VuoCommandAdd.hh  VuoCommandAddPublishedPort.cc  VuoCommandAddPublishedPort.hh  VuoCommandChangeNode.cc  VuoCommandChangeNode.hh  VuoCommandCommon.cc  VuoCommandCommon.hh  VuoCommandConnect.cc  VuoCommandConnect.hh  VuoCommandMove.cc  VuoCommandMove.hh  VuoCommandPublishPort.cc  VuoCommandPublishPort.hh  VuoCommandRemove.cc  VuoCommandRemove.hh  VuoCommandRemoveProtocolPort.cc  VuoCommandRemoveProtocolPort.hh  VuoCommandReorderPublishedPorts.cc  VuoCommandReorderPublishedPorts.hh  VuoCommandReplaceNode.cc  VuoCommandReplaceNode.hh  VuoCommandResizeComment.cc  VuoCommandResizeComment.hh  (+132 more)
framework/: CMakeLists.txt  Info-clang.plist  Info-llvm.plist  Info-llvmc.plist  Info.plist  README.md  Vuo.stub.h  fixRpaths.sh  fixRpathsConan.sh  framework.pro  generateFrameworkHeader.pl  masterLists.pri  vuo-run
node/: CMakeLists.txt  VuoGlContext.cc  VuoGlContext.h  VuoGlTexturePool.h  VuoGradientNoiseCommon.h  VuoImageGet.cc  VuoImageRenderer.cc  VuoImageRenderer.h  VuoLeap.cc  VuoLeap.h  VuoMidi.cc  VuoMidi.h  VuoSceneRenderer.cc  VuoSceneRenderer.h  VuoVerticesParametric.cc  VuoWindow.h  VuoWindow.m  VuoWindowApplication.h  VuoWindowApplication.m  VuoWindowOpenGLInternal.h  VuoWindowOpenGLInternal.m  VuoWindowTextInternal.h  module.h  node.h  node.pro  node_header.h  vuo.color.get.hsl.c  vuo.color.get.rgb.c  vuo.color.make.hsl.c  vuo.color.make.rgb.c  vuo.console.window.c  vuo.event.fireOnStart.c  vuo.event.spinOffEvent.c  vuo.hold.VuoBlendMode.c  vuo.hold.VuoCountWrapMode.c  vuo.hold.VuoCurve.c  vuo.hold.VuoCurveDomain.c  vuo.hold.VuoFrameRequest.c  vuo.hold.VuoGradientNoise.c  vuo.hold.VuoLeapFrame.c  (+304 more)
renderer/: CMakeLists.txt  VuoRendererCable.cc  VuoRendererCable.hh  VuoRendererColors.cc  VuoRendererColors.hh  VuoRendererComment.cc  VuoRendererComment.hh  VuoRendererCommon.cc  VuoRendererCommon.hh  VuoRendererComposition.cc  VuoRendererComposition.hh  VuoRendererFonts.cc  VuoRendererFonts.hh  VuoRendererHiddenInputAttachment.cc  VuoRendererHiddenInputAttachment.hh  VuoRendererInputAttachment.cc  VuoRendererInputAttachment.hh  VuoRendererInputDrawer.cc  VuoRendererInputDrawer.hh  VuoRendererInputListDrawer.cc  VuoRendererInputListDrawer.hh  VuoRendererItem.cc  VuoRendererItem.hh  VuoRendererKeyListForReadOnlyDictionary.cc  VuoRendererKeyListForReadOnlyDictionary.hh  VuoRendererMakeListNode.cc  VuoRendererMakeListNode.hh  VuoRendererNode.cc  VuoRendererNode.hh  VuoRendererPort.cc  VuoRendererPort.hh  VuoRendererPortList.cc  VuoRendererPortList.hh  VuoRendererPublishedPort.cc  VuoRendererPublishedPort.hh  VuoRendererReadOnlyDictionary.cc  VuoRendererReadOnlyDictionary.hh  VuoRendererSignaler.cc  VuoRendererSignaler.hh  VuoRendererTypecastPort.cc  (+5 more)
runner/: CMakeLists.txt  VuoRunner.cc  VuoRunner.hh  VuoRunnerCocoa+Conversion.hh  VuoRunnerCocoa+Conversion.mm  VuoRunnerCocoa.h  VuoRunnerCocoa.mm
runtime/: CMakeLists.txt  VuoCompositionDiff.cc  VuoCompositionDiff.hh  VuoCompositionLoader-Info.plist  VuoCompositionLoader.cc  VuoCompositionState.c  VuoCompositionState.h  VuoEventLoop.h  VuoEventLoop.m  VuoHeap.cc  VuoHeap.h  VuoLog.cc  VuoNodeRegistry.cc  VuoNodeRegistry.hh  VuoNodeSynchronization.cc  VuoNodeSynchronization.hh  VuoRuntime.c  VuoRuntime.cc  VuoRuntime.h  VuoRuntimeCommunicator.cc  VuoRuntimeCommunicator.hh  VuoRuntimeContext.c  VuoRuntimeContext.cc  VuoRuntimeContext.h  VuoRuntimeContext.hh  VuoRuntimeHelper.cc  VuoRuntimeMain.c  runtime.pro  (+8 more)
(+5704 files in other folders)
